update replacement in file